k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: live-streaming
  labels:
    name: live-streaming
